--- a/src/main/resources/templates/auth/login.html
+++ b/src/main/resources/templates/auth/login.html
@@ -30,7 +30,7 @@
             </div>
           </form>
           <div class="mt-3 text-center">
-            <p>Vous n'avez pas de compte ? <a th:href="@{/register}">S'inscrire</a></p>
+           <!-- <p>Vous n'avez pas de compte ? <a th:href="@{/register}">S'inscrire</a></p> -->
           </div>
         </div>
       </div>
